// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountList selectors should return AccountList pollingProcessID 1`] = `0`;

exports[`AccountList selectors should return AccountList statuses 1`] = `
Object {
  "Account1": Object {
    "generating": "running",
    "uploading": "running",
  },
  "Account2": Object {
    "generating": "failure",
    "uploading": "unknown",
  },
  "Account3": Object {
    "generating": "running",
    "uploading": "success",
  },
}
`;

exports[`AccountList selectors should return AccountsList 1`] = `
Object {
  "pollingProcessID": 0,
  "statuses": Object {
    "Account1": Object {
      "generating": "running",
      "uploading": "running",
    },
    "Account2": Object {
      "generating": "failure",
      "uploading": "unknown",
    },
    "Account3": Object {
      "generating": "running",
      "uploading": "success",
    },
  },
}
`;
